--- a/app/styles/components/_navigation.scss
+++ b/app/styles/components/_navigation.scss
@@ -10,5 +10,9 @@
         display: inline;
         padding: 0;
     }
+
+    .active-link {
+        font-weight: bold;
+    }
 }
 // .top-bar .menu-text {}
